--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ag-grid-community": "^28.2.1",
-    "ag-grid-react": "^28.2.1",
+    "ag-grid-community": "28.2.1",
+    "ag-grid-enterprise": "28.2.1",
+    "ag-grid-react": "28.2.1",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-email-editor": "^1.6.3",
+    "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "redux": "^4.2.0",
     "socket.io-client": "^4.5.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
